hosttest.nodeport.srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-srv
spec:
  type: NodePort
  selector:
    app: identitysts
  ports:
    - name: identitysts
      protocol:  TCP
      port: 80
      targetPort: 80
      nodePort: 31903
